			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04h: *********************************

IMP: (3/23/06, RK) NCC: trace resistor connectivity when highlighting equivalent Networks. Update User Manual.

IMP: (3/22/06, GVG) Extra code in StreamClient to force stack size = 0 for Mac.

IMP: (3/22/06, GVG) Number keys should switch between wire and bus in schematics (Bug 651)

BUG: (3/21/06, GVG) STACK_SIZE in Thread must be 0 on MacOSX.
FIX: Refactoring of a few classes and OS class was moved from TopLevel to Client class.
Avoiding multiple ways to determine OS so please use Client API.

BUG: (3/21/06, GVG) Few problems with Colors prefs on Mac described in Bug #645.
One of them was that Electric was reloading only transparent colors after Pref import
FIX: Recaching all color preferences. PrefType enum added.

BUG: (3/21/08, DN) Regressions and those errors not catched/running forever... (Bug #901)
FIX: Uodate Regression.java to recent changes in ServerClient.java 

BUG: (3/21/06, DN) All libraries marked changed after loading up (Bug #900)
FIX: In Main.InitDatabase insert Input.changesQuiet(false). 

IMP/MAN: (3/21/06, DN) Snapshot Logging which is enabled by button in GeneralTab panel.
   Logging is performed to temporary file in platform-dependent  directory. Name of the file
   is printed to "electric.log" and to stdin.

BUG: (3/21/06, DN) Exception in WindowFrame.composeTitle after close of current library.
FIX: Check if current Library is null.

BUG: (3/21/06, DN) Database is currupted after node change (Bug #897).
FIX: In CellBackup.getInstCount check for null CellUsageInfo.

BUG: (3/21/06, DN) Database invariant checking prevents Force quit-save (Bug #861).
FIX: Force quit find last consistent Snapshot and saves it to panic directory.

BUG: (3/21/06, GVG) duplication {lay} versioning detecting wrong view (Bug #895)
FIX: View was not checked.
