@@ -4,6 +4,10 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04h: *********************************
 
+IMP/MAN: (3/23/06, GVG) Access to reloadLibrary in ExplorerTree (no cvs mode).
+                                   
+IMP: (3/23/06, JG): Need facility to reload changed libraries from disk (Bug #721)
+
 IMP: (3/23/06, RK) NCC: trace resistor connectivity when highlighting equivalent Networks. Update User Manual.
 
 IMP: (3/22/06, GVG) Extra code in StreamClient to force stack size = 0 for Mac.
